[update] navigation and homepage UI

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,18 @@ body {
   margin: 0;
   padding: 0;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100vh;
 }
 
 .navbar {
   position: relative;
-  height: 65px;
   width: 100vw;
   background-color: #3f72af;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex: 0 1 60px;
 }
 
 .navbar_heading {
@@ -33,4 +34,42 @@ body {
   color: #F9F7F7;
   font-size: 1.75rem;
   cursor: pointer;
+}
+
+main{
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%
+}
+
+.main_mockup{
+  margin: 3rem 0;
+}
+
+.main_navigation{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.action_button {
+  background-color: #3F72AF;
+  border-radius: 8px;
+  border: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  padding: 10px 16px;
+  cursor: pointer;
+}
+
+.action_button:hover,
+.action_button:focus {
+  background-color: #112D4E;
 }
