--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@
   cursor: pointer;
 }
 
-main {
+main, form {
   width: 100vw;
   height: 100%;
   display: flex;
@@ -96,6 +96,7 @@ main {
   width: 100%;
   padding: 0 3rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -187,7 +188,14 @@ main {
 }
 
 .empty_route_message{
-  margin-top: 3rem;
+  margin: 2rem;
   font-size: 1.5rem;
   text-decoration: underline;
+}
+
+.empty_routes_section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
