--- a/src/index.css
+++ b/src/index.css
@@ -140,10 +140,12 @@ main, form {
 
 .edit_icon {
   color: green;
+  cursor: pointer;
 }
 
 .delete_icon {
   color: red;
+  cursor: pointer;
 }
 
 .plus_circle_icon {
@@ -198,4 +200,18 @@ main, form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.route_map_section{
+  height: 500px;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.mapDiv{
+  width: 100%;
+  height: 100%;
 }
